--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "uuid": "^3.3.2",
     "validator": "^10.8.0",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
