--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.4",
     "normalize.css": "^8.0.0",
     "react": "^16.6.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^18.2.2",
     "react-dom": "^16.6.0",
     "react-modal": "^3.6.1",
     "react-redux": "^5.1.1",
