get ready for deployment: minimal webpack prod setup
- add build scripts to build for various environments (production & otherwise)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Kizito Akhilome <hovkard@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "cover": "npm test -- --coverage"
