--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^23.6.0",
     "moment": "^2.22.2",
