--- a/package.json
+++ b/package.json
@@ -22,12 +22,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "enzyme-to-json": "^3.3.4",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "^23.6.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.4",
     "normalize.css": "^8.0.0",
@@ -39,13 +35,19 @@
     "react-modal": "^3.6.1",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.6.3",
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "validator": "^10.8.0",
-    "webpack": "^3.1.0",
+    "webpack": "^3.1.0"
+  },
+  "devDependencies": {
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "enzyme-to-json": "^3.3.4",
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.6.3",
     "webpack-dev-server": "^2.5.1"
   }
 }
